# mcp-server-data-exploration

./: .gitignore  README.md  pyproject.toml  setup.py
src/mcp_server_ds/: __init__.py  server.py
